# kintu

./: .gitignore  TODO.md  pyproject.toml  tasks.py
kintu/: __init__.py  credential_manager.py  main.py  model_library.py  model_spec.py  utilities.py
kintu/clients/openai/: CONVERTER_TEST.md  type_inspector.py
kintu/model_library/: anthropic.py  gemini.py  groq.py  model_library.py  openai.py  together.py
kintu/types/: client.py  complete.py  content.py  errors.py  llmsdk.py  message.py  model.py  model_spec.py  provider.py  provider_config.py  role.py  tool.py
kintu/types/llmsdks/: README.md  gemini_types.py  openai_types.py
tests/: __init__.py  conftest.py  test_model_library.py
